# strands-deploy-examples

./: .gitignore  README.md
cloudrun/python/: Dockerfile  README.md  agent.py  pyproject.toml
cloudrun/typescript/: index.ts  package.json
docker/python/: Dockerfile  README.md  agent.py  pyproject.toml
docker/typescript/: Dockerfile  README.md  docker-compose.yml  index.ts  package.json
kubernetes/python/: Dockerfile  README.md  agent.py  k8s-deployment.yaml  pyproject.toml
kubernetes/typescript/: Dockerfile  README.md  index.ts  k8s-deployment.yaml  package.json
